# apps/docs/mintlify/api/openapi.yml
@@ -4232,6 +4232,7 @@ paths:
                   description: ID which you provided when creating the customer
                 feature_id:
                   type: string
+                  description: ID of the feature to check access to.
                 entity_id:
                   type: string
                   description: If using entity balances (eg, seats), the entity ID to check access
@@ -4256,12 +4257,9 @@ paths:
                   description: If true, the response will include a preview object, which can be
                     used to display information such as a paywall or upgrade
                     confirmation.
-                product_id:
-                  type: string
-                required_quantity:
-                  type: number
               required:
                 - customer_id
+                - feature_id
       responses:
         "200":
           description: OK
@@ -4831,6 +4829,7 @@ paths:
 
             const result = await autumn.balances.check({
               customerId: "<id>",
+              featureId: "<id>",
             });
         - lang: python
           label: Python (SDK)
@@ -4839,7 +4838,10 @@ paths:
 
             autumn = Autumn(secret_key="am_sk_test...")
 
-            res = autumn.balances.check(customer_id="<id>")
+            res = autumn.balances.check(
+                customer_id="<id>",
+                feature_id="<id>",
+            )
   /v1/balances.track:
     post:
       operationId: balancesTrack
